--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <style>
-    html, body, div {
+    html,
+    body,
+    div {
       margin: 0;
       padding: 0;
       border: 0;
@@ -12,10 +14,12 @@
       vertical-align: baseline;
       font-family: system, sans-serif;
     }
+
     #app-config {
       width: 500px;
       margin: 50px auto;
     }
+
     #animal-picture {
       display: block;
       height: 250px;
@@ -24,8 +28,10 @@
     }
   </style>
 </head>
+
 <body>
-<div id="root"></div>
-<script src="./index.js"></script>
+  <div id="root"></div>
+  <script src="./index.js"></script>
 </body>
+
 </html>
